--- a/可能的想法.md
+++ b/可能的想法.md
@@ -12,3 +12,4 @@
 * 段级自回归，即一次生成一段代码，后一段依赖前一段，可以将mcts搜索树变成非定长的，即每个树节点都可能是一段代码。
 * 做一个软件开发任务的数据集
 * 模型的评价能力没有人测试过，即他能否正确评价一段代码的好坏，或者一段文章的好坏，并基于此做出决策
+* 根据LoRA进一步可以探索，不同的下游任务强调了哪些维度
